fixed wonky alignment of console input line

--- a/src/frontend/css/common.css
+++ b/src/frontend/css/common.css
@@ -148,7 +148,7 @@ body {
   border: 1px solid #ddd;
   border-top-color: #eee;
 }
-.console-input > input, .console-input > input:focus {
+.console-input input, .console-input input:focus {
   font-family: Menlo, Monaco, Consolas, 'Ubuntu Mono', 'Courier New', monospace;
   line-height: 1em;
   padding: 0.4em;
@@ -158,7 +158,7 @@ body {
   box-shadow: none !important;
   border: none;
 }
-.console-input > .input-group-addon {
+.console-input .input-group-addon {
   background-color: white;
   padding-right: 0;
   padding-left: 5px;
